--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -262,9 +262,12 @@
       height: 1.33rem !important;
       margin-left: 1rem;
       margin-right: 0;
+      color: white;
     }
     &:hover {
       box-shadow: 0.2rem 0.4rem 0.4rem 0rem rgba(142, 80, 228, 0.2);
+      background: #8e50e4;
+      color: white;
     }
   }
 
@@ -281,7 +284,8 @@
     color: #ffffff;
     line-height: 1.17rem;
     &:hover {
-      background: rgba(#222, 0.2);
+      background: rgba(#222, 0.2) !important;
+      color: #ffffff !important;
     }
   }
   .rewardIcon {
