--- a/components/RewardGameCard/styles.module.scss
+++ b/components/RewardGameCard/styles.module.scss
@@ -125,7 +125,8 @@
         font-weight: 500;
         color: #8e50e4;
         line-height: 1.5rem;
-        margin-top: 1rem !important;
+        // margin-top: 1rem !important;
+        margin-top: 10px !important;
 
         .iconBox {
           display: none;
