--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -65,6 +65,11 @@
                 color: #222222;
                 line-height: 1.5rem;
                 margin-top: 0;
+
+                svg {
+                  width: 1rem;
+                  height: 1rem;
+                }
               }
               .passNFTInfo {
                 font-size: 1.17rem;
@@ -72,7 +77,8 @@
                 font-weight: 500;
                 color: rgba(#222, 0.5);
                 line-height: 1.17rem;
-                margin-top: 0.83rem;
+                // margin-top: 0.83rem;
+                margin-top: 0.4rem;
                 .iconBox {
                   width: 1.17rem;
                   height: 1.17rem;
@@ -80,6 +86,20 @@
                   margin-left: 0.33rem;
                 }
               }
+            }
+          }
+
+          .unipassLink {
+            margin-top: 1.33rem;
+            font-size: 1.17rem;
+            font-family: Inter-Regular, Inter;
+            font-weight: 400;
+            color: #222222;
+            line-height: 1.67rem;
+            padding: 0.5rem 0.83rem;
+            border-radius: 0.67rem;
+            .arrowIcon {
+              flex-shrink: 0;
             }
           }
         }
@@ -196,6 +216,22 @@
     min-height: 50rem;
     margin: auto;
     overflow: hidden;
+
+    .balanceSection {
+      background-color: white;
+      padding: 2.5rem 2rem 2.67rem;
+      border-radius: 1rem;
+      margin-top: 3.33rem;
+
+      h3 {
+        font-size: 1.5rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #222222;
+        line-height: 1.33rem;
+        margin-bottom: 2.5rem;
+      }
+    }
 
     .hiddenTab {
       display: none !important;
