--- a/components/PageProfile/ProfileTrialingTask/styles.module.scss
+++ b/components/PageProfile/ProfileTrialingTask/styles.module.scss
@@ -17,6 +17,29 @@
     margin-right: 1.5rem;
     max-width: calc(100% - 14.83rem);
 
+    .mobileGameTask {
+      display: flex;
+      justify-content: space-between;
+      h4 {
+        font-size: 1.5rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #222222;
+        line-height: 1.5rem;
+        margin-top: 2.67rem;
+        margin-bottom: 2.08rem;
+      }
+      .mobileGameLogo {
+        width: 5.33rem;
+        height: 5.33rem;
+        flex-shrink: 0;
+        position: relative;
+        background: #d2d2d2;
+        border-radius: 0.67rem;
+        overflow: hidden;
+      }
+    }
+
     .starLabelIcon {
       position: absolute;
       top: -2px;
@@ -87,7 +110,6 @@
 
     padding: 1rem 1rem 1.67rem;
 
-
     .gameLogo {
       display: none;
     }
@@ -110,7 +132,7 @@
       }
       .taskName {
         font-size: 1.17rem;
-        line-height: 1.17rem; 
+        line-height: 1.17rem;
       }
     }
   }
