--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -237,7 +237,6 @@
       display: none !important;
     }
     .tabsHeader {
-
       margin-top: 4rem;
 
       :global {
@@ -271,6 +270,7 @@
     .itemBox {
       margin-top: 2rem;
       margin-bottom: 6.67rem;
+      min-height: 30rem;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -278,6 +278,31 @@
       & > div {
         width: calc((100% - 2.67rem) / 2);
         margin-bottom: 2.67rem;
+      }
+
+      .emptyTrialingTask {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5rem;
+
+        .emptyIllustration {
+          margin: 0 auto;
+          position: relative;
+          width: 9.25rem;
+          height: 6.42rem;
+        }
+        p {
+          margin-top: 1.67rem;
+          font-size: 1.5rem;
+          font-family: Inter-Regular, Inter;
+          font-weight: 400;
+          color: rgba(#222, 0.3);
+          line-height: 1.33rem;
+          text-align: center;
+        }
       }
 
       .passNFTTips,
@@ -321,10 +346,21 @@
     }
 
     .activityBox {
-      margin-top: 1.67rem;
+      margin-top: 2rem;
       margin-bottom: 6.67rem;
       background-color: white;
       border-radius: 1rem;
+      min-height: 28rem;
+    }
+
+    .balanceBox {
+      background: #ffffff;
+      border-radius: 1rem;
+      margin-top: 2rem;
+      margin-bottom: 6.67rem;
+      overflow: hidden;
+      padding: 1.5rem 2rem;
+      min-height: 28rem;
     }
   }
 }
@@ -400,7 +436,6 @@
 
 @media screen and (max-width: 800px) {
   .containerBox {
-
     .profileContent {
       .itemBox {
         // padding: 0 0.6rem;
@@ -432,12 +467,6 @@
   .containerBox {
     .profileContent {
       width: 100%;
-
-
-      .activityBox {
-        margin-bottom: 2rem;
-        margin-top: 1rem;
-      }
 
       .tabsHeader {
         padding-left: 1.33rem;
@@ -529,11 +558,52 @@
 @media screen and (max-width: 600px) {
   .containerBox {
     .profileContent {
-
       .tabsHeader {
         background-color: white;
         margin-top: 0.83rem;
 
+        :global {
+          button {
+            opacity: 0.5;
+            font-size: 1.33rem;
+            font-family: Inter-SemiBold, Inter;
+            font-weight: 600;
+            color: #222222;
+            line-height: 1.33rem;
+
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+            padding-bottom: 0rem !important;
+            padding-top: 8px;
+            width: auto;
+            min-width: 0 !important;
+            text-transform: unset;
+            & + button {
+              margin-left: 1.67rem;
+            }
+          }
+          .Mui-selected {
+            opacity: 1;
+          }
+          .MuiTabs-indicator {
+            height: 0.17rem;
+            background: #222222;
+          }
+        }
+      }
+
+      .activityBox {
+        padding-bottom: 2rem;
+        padding-top: 1.67rem;
+        margin-top: 0rem;
+        margin-bottom: 0;
+        min-height: 20rem;
+      }
+      .balanceBox {
+        margin-top: 0;
+        margin-bottom: 0;
+        min-height: 20rem;
+        padding-top: 2rem;
       }
 
       .itemBox {
@@ -542,6 +612,25 @@
         padding-top: 1.75rem;
         padding-left: 1.33rem;
         padding-right: 1.33rem;
+        margin-bottom: 0;
+        padding-bottom: 1rem;
+
+        min-height: 0;
+        & > div {
+          margin-bottom: 1.33rem;
+        }
+
+        .emptyTrialingTask {
+          p {
+            font-size: 1.17rem;
+            font-family: Inter-Regular, Inter;
+            font-weight: 400;
+            line-height: 1.5rem;
+            width: 60%;
+            margin-top: 0.92rem;
+            margin-bottom: 2rem;
+          }
+        }
       }
       .balanceSection {
         margin-top: 0.83rem;
