fix: update trialing task css

--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -270,7 +270,7 @@
     .itemBox {
       margin-top: 2rem;
       margin-bottom: 6.67rem;
-      min-height: 30rem;
+      // min-height: 30rem;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
