--- a/components/PageProfile/ProfileActivityTabale/styles.module.scss
+++ b/components/PageProfile/ProfileActivityTabale/styles.module.scss
@@ -110,8 +110,10 @@
     .emptyIllustration {
       margin: 0 auto;
       position: relative;
-      width: 9.25rem;
-      height: 6.42rem;
+      // width: 9.25rem;
+      // height: 6.42rem;
+      width: 111px;
+      height: 77px;
     }
     p {
       margin-top: 1.67rem;
