--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -629,6 +629,8 @@
         }
 
         .emptyTrialingTask {
+          min-height: 18rem;
+          padding-top: 4rem;
           p {
             font-size: 1.17rem;
             font-family: Inter-Regular, Inter;
