--- a/components/ConnectWallet/style.module.scss
+++ b/components/ConnectWallet/style.module.scss
@@ -158,7 +158,7 @@
 
   .downItem {
     border-radius: 1rem;
-    border: 0.08rem solid rgba(34, 34, 34, 0.2);
+    border: 1px solid rgba(34, 34, 34, 0.2);
     height: 5.33rem;
     display: flex;
     align-items: center;
@@ -168,6 +168,10 @@
     margin-top: 3.33rem;
     position: relative;
     cursor: pointer;
+
+    &:hover {
+      border-color: rgba($color: #8e50e4, $alpha: 0.5);
+    }
 
     img {
       height: 3rem;
