--- a/components/PageDashboard/BalanceTable/styles.module.scss
+++ b/components/PageDashboard/BalanceTable/styles.module.scss
@@ -24,6 +24,18 @@
       line-height: 1.17rem;
       padding-left: 0;
       padding-right: 0;
+
+      .tokenInfo {
+        display: flex;
+        align-items: center;
+
+        .iconBox {
+          position: relative;
+          width: 2.33rem;
+          height: 2.33rem;
+          margin-right: 0.83rem;
+        }
+      }
     }
   }
 
