--- a/components/PageDashboard/GameDashboardHeader/styles.module.scss
+++ b/components/PageDashboard/GameDashboardHeader/styles.module.scss
@@ -11,6 +11,8 @@
     justify-content: space-between;
 
     .gameBox {
+      display: flex;
+      align-items: center;
       p {
         font-size: 2rem;
         font-family: Inter-Bold, Inter;
@@ -18,6 +20,13 @@
         color: #ffffff;
         line-height: 1.83rem;
         user-select: none;
+      }
+
+      .brandBox {
+        width: 1.61rem;
+        height: 1.61rem;
+        position: relative;
+        margin-left: 0.67rem;
       }
     }
 
@@ -30,7 +39,27 @@
         line-height: 1.33rem;
         padding-bottom: 0.5rem;
         border-bottom: 0.17rem solid white;
+        user-select: none;
+        cursor: pointer;
+        &:hover {
+          opacity: 0.8;
+        }
       }
     }
+  }
+}
+
+@media screen and (max-width: 1200px){
+  .headerBox {
+    .header {
+      width: calc(100% - 2.66rem);
+    }
+  }
+}
+
+
+@media screen and (max-width: 800px) {
+  .headerBox {
+    display: none;
   }
 }
