--- a/components/PageProfile/ProfileTrialingTask/styles.module.scss
+++ b/components/PageProfile/ProfileTrialingTask/styles.module.scss
@@ -1,7 +1,7 @@
 .trialingTask {
   background: #ffffff;
   border-radius: 1rem;
-  padding: 1.33rem;
+  padding: 1.33rem 1.33rem 1.33rem 2rem;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -43,7 +43,7 @@
     .starLabelIcon {
       position: absolute;
       top: -2px;
-      left: 1.33rem;
+      left: 2rem;
       width: 1.67rem;
       height: 1.95rem;
     }
