--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -473,11 +473,24 @@
       .profileHeader {
         .headerInfo {
           .addressItem {
-            // font-size: 2.5rem;
-            // font-family: Inter-Medium, Inter;
-            // font-weight: 500;
-            // color: #222222;
-            // line-height: 2.5rem;
+            font-size: 2rem;
+            font-family: Inter-SemiBold, Inter;
+            font-weight: 600;
+            color: #222222;
+            line-height: 1.67rem;
+          }
+        }
+      }
+    }
+    .profileContent {
+      .tabsHeader {
+        :global {
+          button {
+            font-size: 1.33rem;
+            font-family: Inter-SemiBold, Inter;
+            font-weight: 600;
+            color: #222222;
+            line-height: 1.33rem;
           }
         }
       }
@@ -697,12 +710,12 @@
         padding-bottom: 2rem;
         padding-top: 1.67rem;
         margin-top: 0rem;
-        margin-bottom: 0;
+        margin-bottom: 0.83rem;
         min-height: 20rem;
       }
       .balanceBox {
         margin-top: 0;
-        margin-bottom: 0;
+        margin-bottom: 0.83rem;
         min-height: 20rem;
         padding-top: 2rem;
       }
@@ -713,7 +726,7 @@
         padding-top: 1.75rem;
         padding-left: 1.33rem;
         padding-right: 1.33rem;
-        margin-bottom: 0;
+        margin-bottom: 0.83rem;
         padding-bottom: 1rem;
 
         min-height: 0;
