--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -281,13 +281,16 @@
   align-items: center;
   .languageBox {
     display: none;
+    -webkit-animation: slide-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      both;
+    animation: slide-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
     div {
       font-size: 1.5rem;
       font-family: Inter-Medium, Inter;
       font-weight: 500;
       color: #222222;
       line-height: 1.5rem;
-      padding: 0.88rem 1.67rem;
+      padding: 0.88rem 1.3rem;
     }
   }
 
@@ -295,7 +298,7 @@
     .languageBox {
       display: block;
       position: absolute;
-      top: 84px;
+      top: 72px;
       right: -32%;
       width: 9.5rem;
       background: #ffffff;
@@ -471,7 +474,6 @@
     width: 100vw;
     margin-top: 5.33rem;
     height: 100%;
-
 
     // .connectBox {
     //   position: absolute;
