--- a/components/PageDashboard/DepositTaskModal/styles.module.scss
+++ b/components/PageDashboard/DepositTaskModal/styles.module.scss
@@ -118,15 +118,27 @@
   span {
     overflow: hidden;
     border-radius: 50% !important;
-    :global {
-      .ant-checkbox-checked,
+  }
+  :global {
+
+    .ant-checkbox {
+      border: 1px solid rgba($color: #222, $alpha: 0.3);
+      background-color: transparent !important;
       .ant-checkbox-inner {
-        background-color: #8e50e4 !important;
-        border-color: #8e50e4 !important;
-      }
-      .ant-checkbox-checked::after {
-        border: none !important;
-      }
+        background-color: transparent !important;
+        border-color: transparent !important;
+      } 
+    } 
+
+    .ant-checkbox-checked,
+    .ant-checkbox-inner {
+      background-color: #8e50e4 !important;
+      border-color: #8e50e4 !important;
+      transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+    }
+    .ant-checkbox-checked::after {
+      // border: none !important;
+      border-color: transparent !important;
     }
   }
 }
