--- a/components/PageHome/components/SectionTitle/style.module.scss
+++ b/components/PageHome/components/SectionTitle/style.module.scss
@@ -32,7 +32,15 @@
   }
 
   .subTitle {
-    
+    font-size: 1.75rem;
+    font-family: Montserrat-Medium, Montserrat;
+    font-weight: 500;
+    color: #222222;
+    line-height: 1.75rem;
+    display: inline-flex;
+    align-items: center;
+    margin-left: 0.83rem;
+    flex-grow: 1;
   }
 
   .moreLink {
@@ -74,6 +82,9 @@
       line-height: 1.75rem;
     }
 
+    .subTitle {
+      display: none;
+    }
     .moreLink {
       p {
         font-size: 1.17rem;
