--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -365,7 +365,7 @@
 
   .taskReward {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     font-size: 1.33rem;
     font-family: Inter-Medium, Inter;
@@ -373,7 +373,7 @@
     color: #222222;
     line-height: 1.67rem;
     margin-top: 1.25rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.75rem;
     .iconBox {
       flex-shrink: 0;
       position: relative;
@@ -396,6 +396,50 @@
       width: 2rem;
       height: 2rem;
       margin-right: 0.42rem;
+    }
+  }
+
+  .rewardInnerDivider {
+    height: 0.08rem;
+    opacity: 0.1;
+    border: 0.08rem solid #222222;
+    margin-bottom: 1.83rem;
+  }
+
+  .rewardTips {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    // min-width: 0;
+    // width: 0;
+    overflow: hidden;
+
+    margin-bottom: 1.5rem;
+
+    font-size: 1rem;
+    font-family: Inter-Medium, Inter;
+    font-weight: 500;
+    color: #222222;
+    line-height: 1rem;
+
+    span {
+      color: #8e50e4;
+    }
+
+    .rewardNums {
+      flex-shrink: 0;
+      flex-grow: 0;
+    }
+
+    .rewardTime {
+      display: flex;
+      align-items: center;
+      flex: 1;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      width: 0;
     }
   }
 
