--- a/components/WalkthroughCollection/styles.module.scss
+++ b/components/WalkthroughCollection/styles.module.scss
@@ -30,7 +30,31 @@
     }
   }
 
+  .articleList {
+    margin-top: 0.67rem;
+    position: relative;
+    &::before {
+      display: block;
+      content: '';
+      height: 96%;
+      width: 1px;
+      background-image: linear-gradient(
+        to bottom,
+        rgba(#222, 0.5) 0%,
+        rgba(#222, 0.5) 40%,
+        transparent 40%
+      );
+      background-size: 1px 4px;
+
+      position: absolute;
+      z-index: 0;
+      top: 2%;
+      left: 1rem;
+    }
+  }
+
   .btnBox {
+    margin-top: 0.67rem;
     .clickBtn {
       height: 3.33rem;
       background: rgba(#222222, 0.05);
@@ -44,7 +68,7 @@
       user-select: none;
 
       cursor: pointer;
-      
+
       display: flex;
       align-items: center;
       justify-content: center;
